--- a/frontend/src/views/AppView.scss
+++ b/frontend/src/views/AppView.scss
@@ -1,2 +1,5 @@
+@import 'layout.scss';
+
 .AppView {
+  $app-z-index: 10;
 }
